--- a/OyoRooms/public/index.html
+++ b/OyoRooms/public/index.html
@@ -10,6 +10,7 @@
       content="Web site created using create-react-app"
     />
     <script src="https://kit.fontawesome.com/25408e8f65.js" crossorigin="anonymous"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcS0j7hDpSs-F4xDi2q6AkTD_sWqECR9M&libraries=places"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>React App</title>
   </head>
